Added new Controller & Route: DELETE USER
